--- a/application/modules/planner/views/scripts/auth/login.phtml
+++ b/application/modules/planner/views/scripts/auth/login.phtml
@@ -1,4 +1,4 @@
-<!-- this is management/auth/login -->
+<!-- this is planner/auth/login -->
     <div class="row">
         <div class="span8">
             <?php echo $this->loginForm ?>
