--- a/application/modules/planner/views/scripts/auth/logout.phtml
+++ b/application/modules/planner/views/scripts/auth/logout.phtml
@@ -1,4 +1,4 @@
-<!-- this is management/auth/logout -->
+<!-- this is planner/auth/logout -->
     <div class="row">
         <div class="span8">
             You successfully logged out.
