--- a/application/modules/planner/views/scripts/auth/register.phtml
+++ b/application/modules/planner/views/scripts/auth/register.phtml
@@ -1,4 +1,4 @@
-<!-- this is management/auth/register -->
+<!-- this is planner/auth/register -->
     <div class="row">
         <div class="span8">
             <?php echo $this->registerForm ?>
