--- a/application/modules/planner/views/scripts/layout.phtml
+++ b/application/modules/planner/views/scripts/layout.phtml
@@ -23,6 +23,53 @@
             <!-- TOP PANEL -->
 
             <a class="brand" href="<?php echo $this->url(array(), null, true) ?>">Futurumshop: Planner</a>
+            <ul class="nav">
+                <li <?php if ($this->activeMenu == 'checking'): ?>class="active"<?php endif; ?>>
+                    <a href="<?php echo $this->url(array('action' => 'checking'), null, true) ?>">
+                        Check IN/OUT
+                    </a>
+                </li>
+                <li <?php if ($this->activeMenu == 'planning'): ?>class="active"<?php endif; ?>>
+                    <a href="<?php echo $this->url(array('action' => 'planning'), 'planner', true) ?>">
+                        Planning
+                    </a>
+                </li>
+                <li <?php if ($this->activeMenu == 'requests'): ?>class="active"<?php endif; ?>>
+                    <a href="<?php echo $this->url(array('action' => 'requests'), 'planner', true) ?>">
+                        Vrij aanvraag
+                    </a>
+                </li>
+                <li <?php if ($this->activeMenu == 'open-requests'): ?>class="active"<?php endif; ?>>
+                    <a href="<?php echo $this->url(array('action' => 'open-requests'), 'planner', true) ?>">
+                        Accordering
+                    </a>
+                </li>
+                <li <?php if ($this->activeMenu == 'group-settings'): ?>class="active"<?php endif; ?>>
+                    <a href="<?php echo $this->url(array('action' => 'group-settings'), 'planner', true) ?>">
+                        Settings groepen
+                    </a>
+                </li>
+                <li <?php if ($this->activeMenu == 'user-settings'): ?>class="active"<?php endif; ?>>
+                    <a href="<?php echo $this->url(array('action' => 'user-settings'), 'planner', true) ?>">
+                        Settings users
+                    </a>
+                </li>
+                <li <?php if ($this->activeMenu == 'overview'): ?>class="active"<?php endif; ?>>
+                    <a href="<?php echo $this->url(array('action' => 'overview'), 'planner', true) ?>">
+                        Overzicht
+                    </a>
+                </li>
+                <li <?php if ($this->activeMenu == 'alert'): ?>class="active"<?php endif; ?>>
+                    <a href="<?php echo $this->url(array('action' => 'alert'), 'planner', true) ?>">
+                        Alerts
+                    </a>
+                </li>
+                <li>
+                    <a href="<?php echo $this->url(array(), 'logout', true) ?>">
+                        Login/logout
+                    </a>
+                </li>
+            </ul>
 
             <!-- TOP PANEL -->
         </div>
