--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,4 +1,4 @@
-.container {
+.navbar-static-top .container, .navbar-fixed-top .container, .navbar-fixed-bottom .container, .container {
     width: 1260px;
 }
 .width-full {
