--- a/application/modules/planner/views/scripts/layout.phtml
+++ b/application/modules/planner/views/scripts/layout.phtml
@@ -8,12 +8,12 @@
     <?php echo $this->headLink() ?>
     <?php echo $this->headTitle() ?>
 
-    <?php $this->headScript()->prependFile('/js/global.js'); ?>
     <?php
     $this->headScript()
-        ->prependFile('/js/bootstrap/js/bootstrap.js')
-        ->prependFile('/js/jquery/jquery/jquery.form.js')
-        ->prependFile('/js/jquery/jquery-1.7.2.min.js')
+        ->appendFile('/js/jquery-1.8.2.min.js')
+        ->appendFile('/js/jquery.form.js')
+        ->appendFile('/js/bootstrap.js')
+        ->appendFile('/js/global.js')
 ?>
 </head>
 <body>
