--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11,7 +11,7 @@ input[type="checkbox"] {
 .popover-inner {
     width: auto;
 }
-.checking-table th, .checking-table td {
+.checking-table td {
     padding: 3px;
 }
 /*** Personal styles ***/
