Add model planning and refactor template

--- a/application/modules/planner/views/scripts/planning/index.phtml
+++ b/application/modules/planner/views/scripts/planning/index.phtml
@@ -5,7 +5,7 @@
 
 <?php foreach ($this->groups as $group): ?>
     <?php $this->group = $group; ?>
-    <?php echo $this->render('_blocks/group_row.phtml'); ?>
+    <?php echo $this->render('planning/_blocks/group_row.phtml'); ?>
     <?php endforeach; ?>
 
 <?php endif; ?>
