--- a/application/modules/planner/views/scripts/checking/index.phtml
+++ b/application/modules/planner/views/scripts/checking/index.phtml
@@ -3,7 +3,63 @@ Error! No users.
 <?php else: ?>
 <?php $this->headScript()->appendFile('/js/checking.js'); ?>
 
+    <?php
+    $colors = array(
+        'FF C0 CB',
+        'FF FA CD',
+        'FF FF E0',
+        'FA FA D2',
+        'FF EF D5',
+        'E6 E6 FA',
+        'D8 BF D8',
+        '98 FB 98',
+        '90 EE 90',
+        '9A CD 32',
+        'E0 FF FF',
+        'AF EE EE',
+        'B0 C4 DE',
+        'B0 E0 E6',
+        'AD D8 E6',
+        'FF F8 DC',
+        'FF EB CD',
+        'FF E4 C4',
+        'FF DE AD',
+        'F5 DE B3',
+        'F0 FF F0',
+        'F0 FF FF',
+        'F0 F8 FF',
+        'F5 F5 DC',
+        'FA EB D7',
+        'FF E4 E1',
+        'DC DC DC',
+        'D3 D3 D3',
+        'C0 C0 C0',
+        '77 88 99',
+        '70 80 90',
+    );
+    ?>
+
 <div class="span11">
+
+    <?php foreach (array_unique($colors) as $color) : ?>
+    <table class="table table-bordered table-striped checking-table">
+        <thead>
+        <tr style="background-color: #<?php echo str_replace(' ', '', $color); ?>;">
+            <th class="span3"><?php echo $color ?></th>
+            <th class="span2">Check IN/OUT</th>
+            <th class="span2">Datum</th>
+            <th class="span2">Check IN time</th>
+            <th class="span2">Check OUT time</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr><td colspan="5">No users in this group</td></tr>
+        <tr><td colspan="5">No users in this group</td></tr>
+        <tr><td colspan="5">No users in this group</td></tr>
+        </tbody>
+    </table>
+    <?php endforeach; ?>
+
     <table class="table table-bordered table-striped checking-table">
         <thead>
         <tr>
@@ -21,7 +77,7 @@ Error! No users.
             <?php echo $this->render('checking/_blocks/user_row.phtml'); ?>
             <?php endforeach; ?>
             <?php else: ?>
-            <td colspan="5">No users in this group</td>
+            <tr><td colspan="5">No users in this group</td></tr>
             <?php endif; ?>
         </tbody>
     </table>
@@ -29,7 +85,7 @@ Error! No users.
     <?php foreach($this->groups as $group): ?>
     <table class="table table-bordered table-striped checking-table">
         <thead>
-        <tr>
+        <tr <?php if ( ! empty($group['color'])): ?>style="background-color: #<?php echo $group['color']; ?>;"<?php endif; ?>>
             <th class="span3"><?php echo $group['group_name']; ?></th>
             <th class="span2">Check IN/OUT</th>
             <th class="span2">Datum</th>
@@ -45,7 +101,7 @@ Error! No users.
             <?php echo $this->render('checking/_blocks/user_row.phtml'); ?>
             <?php endforeach; ?>
             <?php else: ?>
-            <td colspan="5">No users in this group</td>
+            <tr><td colspan="5">No users in this group</td></tr>
             <?php endif; ?>
         </tbody>
     </table>
