--- a/application/modules/planner/views/scripts/group-settings/index.phtml
+++ b/application/modules/planner/views/scripts/group-settings/index.phtml
@@ -1,3 +1,4 @@
+<?php $this->headScript()->appendFile('/js/group-settings.js'); ?>
 <div class="span12">
 
     <table class="table table-bordered group-settings-table">
@@ -77,7 +78,7 @@
             <?php foreach ($this->groups as $group): ?>
                 <tr>
                     <td style="background-color: #<?php echo $group['color']; ?>">
-                        <?php echo $group['group_name']; ?>
+                        <a href="<?php echo $this->url(array('controller' => 'group-settings', 'action' => 'get-edit-group-form'), 'planner', true); ?>" class="no-action edit-group" data-group-id="<?php echo $group['id']; ?>"><?php echo $group['group_name']; ?></a>
                     </td>
                     <td>
                         <div class="input-append">
@@ -107,4 +108,18 @@
         </tbody>
     </table>
 
+</div>
+
+<div class="modal hide fade modal-edit-group">
+    <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">X</button>
+        <h3 class="create-group">Create group</h3>
+        <h3 class="edit-group">Edit group: <span class="tmpl-group-name"></span></h3>
+    </div>
+    <div class="modal-body">
+
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-primary button-submit" data-form="form-edit-group">Save</button>
+    </div>
 </div>
