--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -52,3 +52,16 @@ form.form-mini {
     position: absolute;
     margin-left: 200px;
 }
+.group-color-variation {
+    width: 70px;
+    font-size: 12px;
+    margin: 3px;
+    border: 1px solid gray;
+    padding: 5px;
+    text-align: center;
+    float: left;
+}
+.group-color-variation.active {
+    margin: 1px 1px;
+    border: 3px solid #cd5c5c;
+}
