--- a/application/modules/planner/views/scripts/group-settings/index.phtml
+++ b/application/modules/planner/views/scripts/group-settings/index.phtml
@@ -62,7 +62,9 @@
         <thead>
         <tr>
             <th class="span3">
-                <button class="btn btn-mini btn-success create-group"><i class="icon-plus-sign icon-white"></i></button>
+                <a class="btn btn-mini btn-success create-group no-action" href="<?php echo $this->url(array('controller' => 'group-settings', 'action' => 'get-edit-group-form'), 'planner', true); ?>">
+                    <i class="icon-plus-sign icon-white"></i>
+                </a>
                 Group
             </th>
             <th class="span2">
@@ -113,13 +115,14 @@
 <div class="modal hide fade modal-edit-group">
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">X</button>
-        <h3 class="create-group">Create group</h3>
-        <h3 class="edit-group">Edit group: <span class="tmpl-group-name"></span></h3>
+        <h3 class="header-create-group">Create group</h3>
+        <h3 class="header-edit-group">Edit group: <span class="tmpl-group-name"></span></h3>
     </div>
     <div class="modal-body">
 
     </div>
     <div class="modal-footer">
+        <a type="button" class="btn btn-danger button-delete-group no-action" data-group-id="" href="<?php echo $this->url(array('controller' => 'group-settings', 'action' => 'delete-group'), 'planner', true); ?>">Delete</a>
         <button type="button" class="btn btn-primary button-submit" data-form="form-edit-group">Save</button>
     </div>
 </div>
