--- a/application/modules/planner/views/scripts/group-settings/index.phtml
+++ b/application/modules/planner/views/scripts/group-settings/index.phtml
@@ -112,6 +112,17 @@
 
 </div>
 
+<div class="span12 group-work-days-planning">
+    <h3>Select group for planning:</h3>
+    <select name="group-planning" id="group-planning">
+        <option value="">Please selecte group...</option>
+        <?php foreach ($this->groups as $group): ?>
+            <option value="<?php echo $group['id']; ?>" style="background-color: #<?php echo $group['color']; ?>;" data-group-color="<?php echo $group['color']; ?>"><?php echo $group['group_name']; ?></option>
+        <?php endforeach; ?>
+    </select>
+    <div class="planning-body"></div>
+</div>
+
 <div class="modal hide fade modal-edit-group">
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">X</button>
