--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -65,3 +65,20 @@ form.form-mini {
     margin: 1px 1px;
     border: 3px solid #cd5c5c;
 }
+.pause-hour {
+    width: 17px;
+    font-weight: bold;
+}
+.group-planning-weeks tbody form {
+    margin: 0px;
+}
+.group-planning-weeks tbody td {
+    padding: 2px;
+    text-align: center;
+}
+.group-planning-weeks .week-type {
+    position: absolute;
+    margin-left: -120px;
+    margin-top: 3px;
+    padding: 5px 7px;
+}
