--- a/application/modules/planner/views/scripts/group-settings/index.phtml
+++ b/application/modules/planner/views/scripts/group-settings/index.phtml
@@ -129,7 +129,7 @@
 <div class="modal hide fade modal-edit-group">
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">X</button>
-        <h3 class="header-create-group">Create group</h3>
+        <h3 class="create-group">Create group</h3>
         <h3 class="header-edit-group">Edit group: <span class="tmpl-group-name"></span></h3>
     </div>
     <div class="modal-body">
