--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -65,6 +65,16 @@ form.form-mini {
     text-align: center;
     float: left;
 }
+
+.day-status-color {
+    width: 65px;
+    font-size: 12px;
+    margin: 3px;
+    border: 1px solid gray;
+    padding: 5px;
+    text-align: center;
+    float: left;
+}
 .group-color-variation.active {
     margin: 1px 1px;
     border: 3px solid #cd5c5c;
