--- a/application/modules/planner/views/scripts/planning/index.phtml
+++ b/application/modules/planner/views/scripts/planning/index.phtml
@@ -1,4 +1,7 @@
 <?php $this->headScript()->appendFile('/js/planning.js'); ?>
+<?php $this->headScript()->appendFile('/js/bootstrap-timepicker.js'); ?>
+<?php $this->headLink()->appendStylesheet('/css/timepicker.css')
+?>
 <?php if (empty($this->groups)): ?>
 <h2>No groups and users</h2>
 <?php else: ?>
@@ -20,6 +23,6 @@
 
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-primary button-submit" data-form="form-edit-group">Save</button>
+        <button type="button" class="btn btn-primary button-submit" data-form="form-edit-day">Save</button>
     </div>
 </div>
