--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -75,6 +75,16 @@ form.form-mini {
     text-align: center;
     float: left;
 }
+.day-status-color.active {
+    margin: 1px 1px;
+    border: 4px solid #cd5c5c;
+}
+
+.day-status-color-traingler {
+    width: 0;
+    height: 0;
+    border-left: 91px solid transparent;
+}
 .group-color-variation.active {
     margin: 1px 1px;
     border: 3px solid #cd5c5c;
